[package]
name = "pipeline-portal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
atty = "0.2.14"
clap = { version = "4.4.2", features = ["derive"] }
directories = "5.0.1"
unix-named-pipe = "0.2.0"

[[bin]]
name = "portal"
path = "src/main.rs"